# triangle-rs

./: .gitattributes  .gitignore  COPYING  Cargo.toml  Makefile
docs/: Adapters.md  Client.md  Engine.md  Events.md  Game.md  Quickstart.md  Room.md  Social.md
src/: error.rs  lib.rs  macros.rs
src/channel/: mod.rs
src/classes/: client.rs  game.rs  mod.rs  ribbon.rs  ribbon2.rs  room.rs  social.rs
src/engine/: board.rs  constants.rs  mod.rs  multiplayer.rs
src/engine/garbage/: legacy.rs  mod.rs
src/engine/queue/: bag.rs  mod.rs  types.rs
src/engine/utils/: damage_calc.rs  increase.rs  mod.rs  rng.rs  seed.rs
src/engine/utils/kicks/: data.rs  mod.rs
src/engine/utils/tetromino/: data.rs  mod.rs  types.rs
src/types/: events.rs  game.rs  mod.rs  replay.rs  room.rs  server.rs  social.rs  user.rs
src/types/events/: mod.rs  wrapper.rs
src/types/events/recv/: client.rs  mod.rs  room.rs  root.rs  server.rs  social.rs  staff.rs
src/types/events/send/: config.rs  mod.rs  social.rs
src/utils/: adapters.rs  api.rs  bot_wrapper.rs  constants.rs  docs.rs  events.rs  jwt.rs  logger.rs  mod.rs  theorypack.rs
src/utils/api/: core.rs  mod.rs  server.rs  users.rs
tests/: client_test.rs  engine_test.rs
