[package]
name = "triangle-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "triangle"
path = "src/lib.rs"

[[bin]]
name = "triangle-rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tokio-native-tls = "0.3"
native-tls = { version = "0.2", features = ["alpn"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
futures-util = "0.3"
bytes = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
urlencoding = "2"
bitflags = "2.11.0"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
dotenvy = "0.15"
